--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "The sample Node.js project for CPSC304.",
   "main": "server.js",
   "keywords": [],
-  "author": {
-    "name": "Zoe Yuan"
-  },
+  "author": "Zoe Yuan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.0",
     "oracledb": "^5.2.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
