--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,21 +1,23 @@
-# Dependency directories
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Logs
-*.log
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# dotenv environment variable files
-#.env
+# testing
+/coverage
 
-# IDEs and editors
-.vscode/
-.idea/
+# production
+/build
 
-# Mac files
+# misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Windows image file caches
-Thumbs.db
-
-# Windows shortcuts
-*.lnk
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
