--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "express": "^4.17.3",
+    "oracledb": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,7 +45,4 @@
     "webpack": "^5.93.0"
   },
   "proxy": "http://localhost:3001"
-    "express": "^4.17.3",
-    "oracledb": "^5.2.0"
-  }
 }
