--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
   "name": "node_demo_project",
   "version": "1.0.0",
+  "private": true,
   "description": "The sample Node.js project for CPSC304.",
   "main": "server.js",
   "keywords": [],
   "author": "Zoe Yuan",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.17.3",
+    "mysql2": "^3.11.0",
     "oracledb": "^5.2.0"
   }
 }
