--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Zoe Yuan",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "assert": "^2.1.0",
     "axios": "^1.7.3",
     "browserify-zlib": "^0.2.0",
