--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
-    "lucide-react": "^0.424.0",
     "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "lucide-react": "^0.424.0",
+    "oracledb": "^5.2.0",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "express": "^4.17.3",
-    "oracledb": "^5.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
