--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "https-browserify": "^1.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.4",
